--- a/styles.scss
+++ b/styles.scss
@@ -13,7 +13,7 @@ footer {
  justify-content: center;
 }*/
 .libroDiv {
-    border: 1px solid black;
+    border: 1px solid green;
     margin: 5px;
     padding: 1px;
     max-width: 300px;
