--- a/styles.scss
+++ b/styles.scss
@@ -13,7 +13,7 @@ footer {
  justify-content: center;
 }*/
 .libroDiv {
-    border: 1px solid green;
+    border: 1px solid red($color: #000000);
     margin: 5px;
     padding: 1px;
     max-width: 300px;
