--- a/styles.scss
+++ b/styles.scss
@@ -1,34 +1,51 @@
 body {
-    background-color: aquamarine;
-    height: 100vh;
+  background-color: aquamarine;
+  height: 100vh;
 }
 
 footer {
-    display: flex;
-    justify-content: center;
-    bottom: 0px;
+  display: flex;
+  justify-content: center;
+  bottom: 0px;
 }
 /*.libros{
  display: flex;
  justify-content: center;
 }*/
 .libroDiv {
-    border: 1px solid red;
-    margin: 5px;
-    padding: 1px;
-    max-width: 300px;
-    text-align: center;
+  border: 1px solid red;
+  margin: 5px;
+  padding: 1px;
+  max-width: 300px;
+  text-align: center;
 
-    img {
-        height: 100%;
-        max-height: 1200px;
-        width: auto;
-        transition: all .3s ease;
-       
-    }
+  img {
+    height: 100%;
+    max-height: 1200px;
+    width: auto;
+    transition: all 0.3s ease;
+  }
 
-    h3 {
-       color: red;
-       
-    }
+  h3 {
+    color: red;
+  }
+  .claseDeCompra {
+    margin: auto;
+    border: none;
+    border-radius: 5px;
+    background-color: red;
+    color: aliceblue;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3px 20px;
+    max-width: 150px;
+    // padding: 10px 20px; necesito que me cambiar la altura del div
+  }
+  .claseDeIcono {
+    height: 15px;
+    width: 15px;
+    margin-left: 5px;
+  }
 }
