--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,8 @@
+
 body {
   background-color: aquamarine;
   height: 100vh;
+  font-size: 10px;
 }
 
 footer {
@@ -8,16 +10,14 @@ footer {
   justify-content: center;
   bottom: 0px;
 }
-/*.libros{
- display: flex;
- justify-content: center;
-}*/
+
 .libroDiv {
   border: 1px solid red;
   margin: 5px;
-  padding: 1px;
-  max-width: 300px;
   text-align: center;
+  width: fit-content;
+  max-width: 170px;
+  min-width: 170px;
 
   img {
     height: 100%;
@@ -28,9 +28,14 @@ footer {
 
   h3 {
     color: red;
+    font-size: 1rem;
   }
+  h5{
+    font-size: 1rem;
+  }
+
   .claseDeCompra {
-    margin: auto;
+    margin: auto auto 4px auto;
     border: none;
     border-radius: 5px;
     background-color: red;
@@ -39,9 +44,9 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 3px 20px;
+    padding: 3px 15px;
     max-width: 150px;
-    // padding: 10px 20px; necesito que me cambiar la altura del div
+    
   }
   .claseDeIcono {
     height: 15px;
