Se agrego la funcionalidad al boton de generos

--- a/styles.css
+++ b/styles.css
@@ -49,4 +49,10 @@ footer {
   height: 15px;
   width: 15px;
   margin-left: 5px;
+}
+
+.li-categorias {
+  color: blue;
+  margin: 3px;
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
