--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,16 @@ footer {
   width: fit-content;
   max-width: 170px;
   min-width: 170px;
+  overflow: hidden; /*Oculta cualquier parte de la imagen que se salga del contenedor*/
 }
 .libroDiv img {
   height: 100%;
   max-height: 1200px;
   width: auto;
-  transition: all 0.3s ease;
+  transition: transform 0.3s;
+}
+.libroDiv img:hover {
+  transform: scale(1.2);
 }
 .libroDiv h3 {
   color: red;
