--- a/styles.scss
+++ b/styles.scss
@@ -1,65 +1,85 @@
-
 body {
-  background-color: aquamarine;
-  height: 100vh;
-  font-size: 10px;
+    background-color: aquamarine;
+    height: 100vh;
+    font-size: 10px;
 }
 
 footer {
-  display: flex;
-  justify-content: center;
-  bottom: 0px;
-  background-color: rgb(185, 145, 145);
+    display: flex;
+    justify-content: center;
+    bottom: 0px;
+    background-color: rgb(185, 145, 145);
 }
 
 .libroDiv {
-  border: 1px solid red;
-  margin: 5px;
-  text-align: center;
-  width: fit-content;
-  max-width: 170px;
-  min-width: 170px;
-  overflow: hidden;/*Oculta cualquier parte de la imagen que se salga del contenedor*/
+    border: 1px solid red;
+    margin: 5px;
+    text-align: center;
+    width: fit-content;
+    max-width: 170px;
+    min-width: 170px;
+    overflow: hidden;
 
-  img {
-    height: 100%;
-    max-height: 1200px;
-    width: auto;
-    transition: transform 0.3s;
-  }
-  img:hover{
-    transform: scale(1.2);
-  }
+    /*Oculta cualquier parte de la imagen que se salga del contenedor*/
+    .imgLibro {
+        width: 170px;
+        overflow: hidden;
 
-  h3 {
-    color: red;
-    font-size: 1rem;
-  }
-  h5{
-    font-size: 1rem;
-  }
+        img {
+            width: 100%;
+            height: auto;
+            transition: transform 0.3s;
+        }        
+    }
+    .imgLibro:hover img{
+        transform: scale(1.2);
+    }
 
-  .claseDeCompra {
-    margin: auto auto 4px auto;
-    border: none;
-    border-radius: 5px;
-    background-color: red;
-    color: aliceblue;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 3px 15px;
-    max-width: 150px;
-    
-  }
-  .claseDeIcono {
-    height: 15px;
-    width: 15px;
-    margin-left: 5px;
-  }
+    /*img {
+        height: 100%;
+        max-height: 1200px;
+        width: auto;
+        transition-property: all;
+        transition-duration: 0.5s;
+        transition-timing-function: linear;
+    }
+
+    img:hover {
+        transform: scale(1.2);
+    }*/
+
+    h3 {
+        color: red;
+        font-size: 1rem;
+    }
+
+    h5 {
+        font-size: 1rem;
+    }
+
+    .claseDeCompra {
+        margin: auto auto 4px auto;
+        border: none;
+        border-radius: 5px;
+        background-color: red;
+        color: aliceblue;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 3px 15px;
+        max-width: 150px;
+
+    }
+
+    .claseDeIcono {
+        height: 15px;
+        width: 15px;
+        margin-left: 5px;
+    }
 }
-.li-categorias{
+
+.li-categorias {
     color: blue;
     margin: 3px;
     cursor: pointer;
