--- a/styles.scss
+++ b/styles.scss
@@ -1,34 +1,79 @@
 body {
     background-color: aquamarine;
     height: 100vh;
+    font-size: 10px;
+}
+
+.libros {
+    display: flex;
+    overflow-x: auto; /* Permite el desplazamiento horizontal */
+    scroll-snap-type: x mandatory; /* Hace que cada elemento del carrusel se desplace en una sola "parada" */
+    -webkit-overflow-scrolling: touch; /* Desplazamiento suave en iOS */
+}
+
+.libroDiv {
+    border: 1px solid red;
+    margin: 5px;
+    text-align: center;
+    flex: 0 0 auto; /* Los elementos del carrusel no deben cambiar de tamaño */
+    width: fit-content;
+    max-width: 170px;
+    min-width: 170px;
+    scroll-snap-align: start; /* Alinea los elementos del carrusel al inicio */
+    overflow: hidden;
+    /*Oculta cualquier parte de la imagen que se salga del contenedor*/
+
+    img {
+        height: 100%;
+        max-height: 50%;
+        width: auto;
+        transition: transform 0.3s;
+    }
+
+    img:hover {
+        transform: scale(1.2);
+    }
+
+    h3 {
+        color: red;
+        font-size: 1rem;
+    }
+
+    h5 {
+        font-size: 1rem;
+    }
+
+    .claseDeCompra {
+        margin: auto auto 4px auto;
+        border: none;
+        border-radius: 5px;
+        background-color: red;
+        color: aliceblue;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 3px 15px;
+        max-width: 150px;
+
+    }
+
+    .claseDeIcono {
+        height: 15px;
+        width: 15px;
+        margin-left: 5px;
+    }
 }
 
 footer {
     display: flex;
     justify-content: center;
     bottom: 0px;
+    background-color: rgb(185, 145, 145);
 }
-/*.libros{
- display: flex;
- justify-content: center;
-}*/
-.libroDiv {
-    border: 1px solid black;
-    margin: 5px;
-    padding: 1px;
-    max-width: 300px;
-    text-align: center;
 
-    img {
-        height: 100%;
-        max-height: 1200px;
-        width: auto;
-        transition: all .3s ease;
-       
-    }
-
-    h3 {
-       color: red;
-       
-    }
+.li-categorias {
+    color: blue;
+    margin: 3px;
+    cursor: pointer;
 }
