--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,7 @@ footer {
   width: fit-content;
   max-width: 170px;
   min-width: 170px;
-  overflow: hidden;
-  /*Oculta cualquier parte de la imagen que se salga del contenedor*/
+  overflow: hidden; /*Oculta cualquier parte de la imagen que se salga del contenedor*/
   /*img {
       height: 100%;
       max-height: 1200px;
