--- a/styles.scss
+++ b/styles.scss
@@ -18,9 +18,8 @@ footer {
     width: fit-content;
     max-width: 170px;
     min-width: 170px;
-    overflow: hidden;
-
-    /*Oculta cualquier parte de la imagen que se salga del contenedor*/
+    overflow: hidden; /*Oculta cualquier parte de la imagen que se salga del contenedor*/
+    
     .imgLibro {
         width: 170px;
         overflow: hidden;
@@ -29,9 +28,10 @@ footer {
             width: 100%;
             height: auto;
             transition: transform 0.3s;
-        }        
+        }
     }
-    .imgLibro:hover img{
+
+    .imgLibro:hover img {
         transform: scale(1.2);
     }
 
