--- a/styles.css
+++ b/styles.css
@@ -46,4 +46,44 @@ footer {
   height: 15px;
   width: 15px;
   margin-left: 5px;
+}
+
+/* styles.css */
+.tarjeta-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tarjeta-sub-container {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.tarjeta-sub-container label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.tarjeta-sub-container input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.tarjeta-sub-container button {
+  background: red;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
 }/*# sourceMappingURL=styles.css.map */
