--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@ footer {
 
 .libros {
   display: flex;
-  overflow-x: auto; /* Permite el desplazamiento horizontal */
-  scroll-snap-type: x mandatory; /* Hace que cada elemento del carrusel se desplace en una sola "parada" */
+  overflow-x: auto;
+  /* Permite el desplazamiento horizontal */
+  scroll-snap-type: x mandatory;
+  /* Hace que cada elemento del carrusel se desplace en una sola "parada" */
 }
 .libros .libroDiv {
   border: 1px solid red;
@@ -24,7 +26,8 @@ footer {
   width: fit-content;
   max-width: 170px;
   min-width: 170px;
-  overflow: hidden; /*Oculta cualquier parte de la imagen que se salga del contenedor*/
+  overflow: hidden;
+  /*Oculta cualquier parte de la imagen que se salga del contenedor*/
   /*img {
       height: 100%;
       max-height: 1200px;
