--- a/styles.scss
+++ b/styles.scss
@@ -10,36 +10,40 @@ footer {
     bottom: 0px;
     background-color: rgb(185, 145, 145);
 }
-.libros{
+
+.libros {
     display: flex;
-    overflow-x: auto; /* Permite el desplazamiento horizontal */
-    scroll-snap-type: x mandatory; /* Hace que cada elemento del carrusel se desplace en una sola "parada" */
-    
+    overflow-x: auto;
+    /* Permite el desplazamiento horizontal */
+    scroll-snap-type: x mandatory;
+    /* Hace que cada elemento del carrusel se desplace en una sola "parada" */
+
     .libroDiv {
-    
+
         border: 1px solid red;
         margin: 5px;
         text-align: center;
         width: fit-content;
         max-width: 170px;
         min-width: 170px;
-        overflow: hidden; /*Oculta cualquier parte de la imagen que se salga del contenedor*/
-        
+        overflow: hidden;
+        /*Oculta cualquier parte de la imagen que se salga del contenedor*/
+
         .imgLibro {
             width: 170px;
             overflow: hidden;
-    
+
             img {
                 width: 100%;
                 height: auto;
                 transition: transform 0.3s;
             }
         }
-    
+
         .imgLibro:hover img {
             transform: scale(1.2);
         }
-    
+
         /*img {
             height: 100%;
             max-height: 1200px;
@@ -52,16 +56,16 @@ footer {
         img:hover {
             transform: scale(1.2);
         }*/
-    
+
         h3 {
             color: red;
             font-size: 1rem;
         }
-    
+
         h5 {
             font-size: 1rem;
         }
-    
+
         .claseDeCompra {
             margin: auto auto 4px auto;
             border: none;
@@ -74,9 +78,8 @@ footer {
             justify-content: center;
             padding: 3px 15px;
             max-width: 150px;
-    
         }
-    
+
         .claseDeIcono {
             height: 15px;
             width: 15px;
