--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,9 @@ footer {
   /* Hace que cada elemento del carrusel se desplace en una sola "parada" */
 }
 .libros .libroDiv {
-  border: 1px solid red;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
   margin: 5px;
   text-align: center;
   width: -moz-fit-content;
@@ -27,7 +29,6 @@ footer {
   max-width: 170px;
   min-width: 170px;
   overflow: hidden;
-  /*Oculta cualquier parte de la imagen que se salga del contenedor*/
   /*img {
       height: 100%;
       max-height: 1200px;
