--- a/styles.scss
+++ b/styles.scss
@@ -63,6 +63,10 @@ footer {
             color: red;
             font-size: 1rem;
         }
+        h3:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
 
         h5 {
             font-size: 1rem;
