--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,14 @@ footer {
   background-color: rgb(185, 145, 145);
 }
 
+header {
+  background-color: red !important;
+}
+
+.navbar {
+  background-color: red !important;
+}
+
 .libros {
   display: flex;
   overflow-x: auto;
@@ -131,4 +139,11 @@ footer {
 
 .btn-outline-success {
   margin: 5px;
+}
+
+.carrito {
+  height: 30px;
+}
+.carrito:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
