--- a/styles.scss
+++ b/styles.scss
@@ -142,4 +142,11 @@ footer {
 
 .btn-outline-success {
     margin: 5px;
+    color: black;
+}
+// NavBar 
+.container-fluid{
+    background-color: rgba(255, 0, 0, 0.605);
+    margin: auto;
+    padding: 12px;
 }
