--- a/styles.scss
+++ b/styles.scss
@@ -37,7 +37,7 @@ footer {
 
             img {
                 width: 100%;
-                height: auto;
+                height: 270px; //anteriormente auto 
                 transition: transform 0.3s;
             }
         }
@@ -71,20 +71,20 @@ footer {
         h5 {
             font-size: 1rem;
         }
-
-        .claseDeCompra {
-            margin: auto auto 4px auto;
-            border: none;
-            border-radius: 5px;
-            background-color: red;
-            color: aliceblue;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 3px 15px;
-            max-width: 150px;
-        }
+        // "btn btn-outline-danger" utilizamos los botones de bootstrap
+        // .claseDeCompra {
+        //     margin: auto auto 4px auto;
+        //     border: none;
+        //     border-radius: 5px;
+        //     background-color: red;
+        //     color: aliceblue;
+        //     cursor: pointer;
+        //     display: flex;
+        //     align-items: center;
+        //     justify-content: center;
+        //     padding: 3px 15px;
+        //     max-width: 150px;
+        // }
 
         .claseDeIcono {
             height: 15px;
@@ -151,5 +151,5 @@ footer {
     padding: 12px;
 }
 .btn-outline-dark{
-    margin-left: 5px;
+    margin: 5px;
 }
