--- a/styles.scss
+++ b/styles.scss
@@ -42,7 +42,7 @@ main {
     max-width: 170px;
     min-width: 170px;
     overflow: hidden; //Oculta cualquier parte de la imagen que se salga del contenedor
-
+    background-color: rgba(0, 221, 255, 0.185);
     .imgLibro {
       width: 170px;
       overflow: hidden;
@@ -142,4 +142,12 @@ footer {
   text-align: center;
   padding: 20px;
   width: 100%;
+}
+// Fondos de busquedas y recomendaciones
+#resultadosDeBusqueda{
+  background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEitFvdJc4iPHCQbGCDQxCF5n7PpI_oLa43YMUlFn6Rwm6Vjh1gy9UvW71r3S--sGo6XT-zwuQEXsAMYI2ArN4QPsrKuiQ36fAMD8Nzt558SvL-9_SW5hg_Efvu-wWQuKvx7qc8o-F4TNWGXrD06GBI2hZXZSDt7vQ-lcMhPJN7M8T_rx7-60Jmz_lQP/s1200/La%20biblioteca%20flotante%20de%20Tokio-3.jpg");
+}
+//
+#libros{
+  background-image: url("https://www.dsigno.es/blog/wp-content/uploads/2017/12/biblioteca4.jpg");
 }
